--- a/public/src/index.html
+++ b/public/src/index.html
@@ -8,10 +8,12 @@
 
 </head>
 <body>
-    @@include('@@webRoot/html/include/header.html')
-    <!-- https://www.neungyule.com/pages/ko/Default.asp   -->
-    @@include('@@webRoot/html/include/contents.html')
-    @@include('@@webRoot/html/include/footer.html')
+    <div class="container">
+        @@include('@@webRoot/html/include/header.html')
+        <!-- https://www.neungyule.com/pages/ko/Default.asp   -->
+        @@include('@@webRoot/html/include/contents.html')
+        @@include('@@webRoot/html/include/footer.html')
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="/public/src/resources/js/lib/slick.min.js"></script>
     <script src="/public/src/resources/js/lib/main.js"></script>
