--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-    @@include('/html/include/meta.html')
+    @@include('html/include/meta.html')
 </head>
 <body>
     <div class="container">
-        @@include('/html/include/header.html')
-        @@include('/html/include/contents.html')
-        @@include('/html/include/footer.html')
+        @@include('html/include/header.html')
+        @@include('html/include/contents.html')
+        @@include('html/include/footer.html')
     </div>
-    @@include('/html/include/jsWrap.html')
+    @@include('html/include/jsWrap.html')
     
 </body>
 </html>
